# claude-power-automate

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: az-cli-setup.md  operations.md
skills/power-automate-action-configuration/: SKILL.md
skills/power-automate-action-configuration/references/: actions-connectors.md
skills/power-automate-api-client/: SKILL.md
skills/power-automate-docs/: SKILL.md
skills/power-automate-docs/references/: doc-map.md
skills/power-automate-expression-syntax/: SKILL.md
skills/power-automate-expression-syntax/references/: cloud-flow-expressions.md  power-fx-desktop-flows.md
skills/power-automate-reference/: SKILL.md
skills/power-automate-reference/references/: expression-functions.md  triggers-and-actions.md  workflow-definition-language-schema.md
skills/power-automate-run-forensics/: SKILL.md
skills/power-automate-run-forensics/references/: errors-limits.md
skills/power-automate-solutions/: SKILL.md
skills/power-automate-solutions/references/: solutions-alm.md
skills/power-automate-workflow-patterns/: SKILL.md
skills/power-automate-workflow-patterns/references/: cloud-flow-patterns.md
src/power_automate_cli/: __init__.py  __main__.py  auth.py  cli.py  config.py
tests/: test_cli.py
