[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "power-automate-cli"
version = "0.1.0"
description = "Local, open CLI for Microsoft Power Automate cloud flows via the Dataverse and Power Platform APIs, authenticated with the Azure CLI. Part of the claude-power-automate suite."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Wals.pro" }]
keywords = [
  "power-automate",
  "power-platform",
  "dataverse",
  "cloud-flows",
  "azure-cli",
  "claude",
  "claude-code",
  "agent-skills",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Build Tools",
  "Topic :: System :: Systems Administration",
]
dependencies = ["requests>=2.28"]

[project.urls]
Homepage = "https://github.com/Wals-pro/claude-power-automate"
Repository = "https://github.com/Wals-pro/claude-power-automate"
Changelog = "https://github.com/Wals-pro/claude-power-automate/blob/main/CHANGELOG.md"
Issues = "https://github.com/Wals-pro/claude-power-automate/issues"

[project.scripts]
power-automate = "power_automate_cli.cli:main"
pa-ctl = "power_automate_cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/power_automate_cli"]

[tool.hatch.build.targets.sdist]
include = ["src", "tests", "skills", "docs", "README.md", "CHANGELOG.md", "LICENSE"]
